Fix checkbox spacing issue

--- a/templates/_css/style.scss
+++ b/templates/_css/style.scss
@@ -1316,9 +1316,6 @@ label.checkbox{
     input{
         flex-shrink: 0;
     }
-    input + *{
-        margin-left: var(--s);
-    }
 }
 
 .month-input, select.year-input{
